# risk-backtest

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: 01_backtesting.ipynb  02_var_models.ipynb  03_sensitivity_analysis.ipynb  README.md
src/risk_backtest/: __init__.py  backtest.py  calibration.py  cluster.py  config.py  expected_shortfall.py  parallel.py  plotting.py  regulatory.py  sensitivity.py  statistical_tests.py  utils.py  var_models.py
tests/: test_backtest.py  test_cluster.py  test_config.py  test_expected_shortfall.py  test_regulatory.py  test_sensitivity.py  test_statistical_tests.py  test_var_models.py
