[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risk-backtest"
version = "1.0.1"
description = "A data-agnostic backtesting toolbox for VaR and other risk measures"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "will04", email = "william0424@users.noreply.github.com" },
]
keywords = ["var", "backtesting", "risk", "value-at-risk", "finance", "quantitative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
parallel = ["joblib>=1.3"]
models = ["arch>=6.0"]
plotting = ["matplotlib>=3.5"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "joblib>=1.3",
    "arch>=6.0",
    "matplotlib>=3.5",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/william0424/risk-backtest"
Repository = "https://github.com/william0424/risk-backtest"
Issues = "https://github.com/william0424/risk-backtest/issues"
Changelog = "https://github.com/william0424/risk-backtest/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/risk_backtest"]

[tool.hatch.build.targets.sdist]
include = [
    "src/risk_backtest",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
